--- a/particpants.html
+++ b/particpants.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="nav-bar" id="myNavBar">
-        <a href="home.html" class="nav-button">Home</a>
+        <a href="index.html" class="nav-button">Home</a>
         <a href="about.html" class="nav-button">About</a>
         <a href="guiding_questions.html" class="nav-button">Guiding Questions</a>
         <a href="call_for_particpants.html" class="nav-button">Call for Participants</a>
