--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <h1>Organizers</h1>
         <div class="photo-row">
             <div class="photo-text">
-                <img src="../images/shuning_lu.JPG" alt="Organizer 1">
+                <img src="/images/shuning_lu.JPG" alt="Organizer 1">
                 <h3>Shuning Lu</h3>
                 <h5>Philip Merrill College of Journalism,</h5>
                 <h5>University of Maryland, College Park</h5>
@@ -51,7 +51,7 @@
 
             </div>
             <div class="photo-text" >
-                <img src="../images/ewa_maslowska.jpg" alt="Organizer 2">
+                <img src="/images/ewa_maslowska.jpg" alt="Organizer 2">
                 <h3>Ewa Maslowska</h3>
                 <h5>Institute of Communications Research,</h5>
                 <h5>University of Illinois Urbana-Champaign</h5>
@@ -65,7 +65,7 @@
 
             </div>
             <div class="photo-text">
-                <img src="../images/empty.webp" alt="Organizer 3">
+                <img src="/images/empty.webp" alt="Organizer 3">
                 <h3>Harsh Taneja</h3>
                 <h5>Institute of Communications Research,</h5>
                 <h5>University of Illinois Urbana-Champaign</h5>
@@ -79,7 +79,7 @@
 
             </div>
             <div class="photo-text">
-                <img src="../images/empty.webp" alt="Organizer 4">
+                <img src="/images/empty.webp" alt="Organizer 4">
                 <h3>Nathan Walter</h3>
                 <h5>School of Communication,</h5>
                 <h5>Northwestern University</h5>
@@ -96,7 +96,7 @@
         <h1>Speakers</h1>
         <div class="photo-row">
             <div class="photo-text">
-                <img src="../images/helena_bilandzic.jpeg" alt="Speaker 1">
+                <img src="/images/helena_bilandzic.jpeg" alt="Speaker 1">
                 <h3>Helena Bilandzic</h3>
 
                 <button class="bio-toggle" data-target="helena">Read Bio</button>
@@ -108,7 +108,7 @@
 
             </div>
             <div class="photo-text">
-                <img src="../images/empty.webp" alt="Speaker 2">
+                <img src="/images/empty.webp" alt="Speaker 2">
                 <h3>Yonaira Rivera</h3>
 
                 <button class="bio-toggle" data-target="yonaira">Read Bio</button>
@@ -120,7 +120,7 @@
 
             </div>
             <div class="photo-text">
-                <img src="../images/empty.webp" alt="Speaker 3">
+                <img src="/images/empty.webp" alt="Speaker 3">
                 <h3>Sebastian Valenzuela</h3>
 
                 <button class="bio-toggle" data-target="sebastian">Read Bio</button>
@@ -132,7 +132,7 @@
 
             </div>
             <div class="photo-text">
-                <img src="../images/tian_yang.jpg" alt="Speaker 4">
+                <img src="/images/tian_yang.jpg" alt="Speaker 4">
                 <h3>Tian Yang</h3>
 
                 <button class="bio-toggle" data-target="tian">Read Bio</button>
